--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
   <link rel="icon" href="images/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
 </head>
 
 <body>
   <div class="top-container">
     <div class="title-text">
       <h1>I'm Alex.</h1>
-      <h2>Just a</h2>
-      <h2>freelance web developer</h2>
+      <h1>Junior freelance web developer</h1>
     </div>
   </div>
 
@@ -23,20 +24,49 @@
       <img src="images/alex-profile-img.jpg" alt="alex-profile-img">
       <p class="intro">A day never passes without a coffee and a good coding challenge. </p>
     </div>
-    <hr>
+
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My Skills</h2>
       <div class="skill-row">
         <img class="code-img" src="/images/hacker.jpg" alt="hacker-img">
 
         <h3>Design & Development</h3>
         <p>I started learning to code when I was in high school because I wanted to make my own video games. <br>
-          Later I found that I like better to create web applications.<br>
-          This way I can help people and businesses.</p>
+          Later I found that I like to create web applications. This way I can help businesses grow.</p>
 
       </div>
     </div>
-    <hr>
+
+    <div class="row row-cols-1 row-cols-md-3 g-4 ">
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/css.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">CSS</h5>
+            <p class="card-text">Created and added content using <span>CSS</span> and <span>Bootstrap</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/html.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">HTML</h5>
+            <p class="card-text">Created and added content using <span>HTML</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="images/java.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">JAVA/SPRING</h5>
+            <p class="card-text">Backend dev with <span>Java</span> and <span>Spring</span> framework</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>I will be happy to share my experience.</h3>
